# --
# CHANGES - change log of OTRS
# Copyright (C) 2001-2009 OTRS AG, http://otrs.org/
# --
# $Id: CHANGES,v 1.993.2.28 2009-09-29 11:47:48 martin Exp $
# --
# This software comes with ABSOLUTELY NO WARRANTY. For details, see
# the enclosed file COPYING for license information (AGPL). If you
# did not receive this file, see http://www.gnu.org/licenses/agpl.txt.
# --

2.4.5 (2009/??/??)
 - (2009/09/29) Fixed bug#4341 - RTE is not coupled with RichTextViewing. Rich
    text is being shown, even if the text/plain MIME part is available.
    Added new config option to force rich text viewing in ticket zoom.

    SysConfig -> Ticket -> Frontend::Agent::Ticket::ViewZoom ->
     -=> Ticket::Frontend::ZoomRichTextForce

 - (2009/09/28) Fixed bug#4269 - Softwareerror in stats module after uninstall
    ITSMIncidentProblemManagement
 - (2009/09/28) Fixed bug#4341 - No HighlightColors configured fills up OTRS log
    file with warnings.
 - (2009/09/28) Fixed bug#4328 - Incorrect charset in AgentTicketAttachment.
 - (2009/09/26) Fixed bug#4302 - Dashboard: Tickets Stats graph incorrect
   (permission related).
 - (2009/09/24) Fixed bug#3909 - Optional TicketFreeTimes with AgentTicketCompose
    break when attaching a file
 - (2009/09/23) Fixed bug#4326 - Notification emails have empty lines by using
    opera at creation time.
 - (2009/09/23) Fixed bug#3001 - Agent ticket queue ordering by priority causes
    SQL error.
 - (2009/09/23) Fixed bug#3969 - Role <-> User Admin Screen Refresh Error.
 - (2009/09/23) Fixed bug#3787 - Generic Agent: Send no notifications is not
    working.
 - (2009/09/23) Fixed bug#4222 - Changed Italian translation of "Login As".
 - (2009/09/23) Fixed bug#3923 - Frontend::Output::FilterText###OutputFilterTextAutoLink
    does not work.
 - (2009/09/23) Fixed bug#4226 - "Previous owner" alway empty when a new owner
    must be defined.
 - (2009/09/23) Fixed bug#4322 - Bulk-Action checkboxes are refilled wrongly by
    Firefox-Autocomplete feature.